--- a/app/globals.css
+++ b/app/globals.css
@@ -1,28 +1,51 @@
 body {
-margin: 0;
-padding: 0;
-font-family: Arial, sans-serif;
-background: #f5f5f5;
-color: #222;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: #f5f5f5;
+    color: #222;
 }
 
+aside {
+    width: 100px;
+    background: #333;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    gap: 1rem;
+}
 
 header {
-background: #222;
-padding: 1rem;
-color: white;
-display: flex;
-gap: 2rem;
+    background: #222;
+    padding: 1rem;
+    color: white;
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
 }
 
 
 header a {
-colour: white;
-text-decoration: none;
-font-weight: bold;
+    colour: white;
+    text-decoration: none;
+    font-weight: bold;
 }
 
+.main-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
 
 main {
-padding: 2rem;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
 }
