Add sidebar icons and links

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,3 +49,9 @@ main {
     display: flex;
     justify-content: center;
 }
+
+.icons {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
