--- a/app/homePage.module.css
+++ b/app/homePage.module.css
@@ -44,8 +44,8 @@
     display: flex;
     align-items: center;
     width: fit-content;
-    background-color: #0a3d62;
-    color: #ffffff;
+    color: #222;
+    border: 2px solid #222;
     padding: 10px 16px;
     border-radius: 8px;
     text-decoration: none;
