--- a/app/pages/about/About.module.css
+++ b/app/pages/about/About.module.css
@@ -1,10 +1,14 @@
 .aboutContainer {
     height: 100vh;
     max-width: 800px;
+    display: flex;
 }
 
 .meImg {
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
+    margin: 20px;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;  
+    object-fit: cover; 
+    display: block;
 }
