--- a/app/pages/about/About.module.css
+++ b/app/pages/about/About.module.css
@@ -11,3 +11,21 @@
     object-fit: cover; 
     display: block;
 }
+
+
+@media (max-width: 650px) {
+.aboutContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.meImg {
+    margin: 20px;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;  
+    object-fit: cover; 
+    display: block;
+}
+}
